# scip-vina

./: CMakeLists.txt  README.md
src/lib/: common.h  model.cpp  model.h  parse_pdbqt.cpp  parse_pdbqt.h  quaternion.cpp  quaternion.h
src/main/: main.cpp
